@@ -1,10 +1,10 @@
 {
-  "count": 9,
-  "uniques": 4,
+  "count": 10,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
