@@ -1,3 +1,10 @@
+2022-08-12T08:19:43Z:
+* notice: last 14d: unq all: 6 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 146 295 / 154 304
+* notice: next accum: outdated-unq outdated-all / unq all: 146 295 / 156 305
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-07-29 2022-08-12]
+
 2022-08-11T16:21:02Z:
 * notice: last 14d: unq all: 4 9
 * notice: prev accum: outdated-unq outdated-all / unq all: 145 293 / 154 303
